<resources>
    <string name="app_name">Nakama!</string>
    <string name="title_activity_detail">Detail Informasi</string>
    <string name="by_munawir_fikri_al_akbari">By Munawir Fikri Al-akbari</string>
    <string name="detail_poster">detail poster</string>
    <string name="title">Title</string>
    <string name="category">Category</string>
    <string name="date_release">Date Release</string>
    <string name="lorem_ipsum_adalah_text_dummy_yang_kerap_kali_digunakan_oleh_para_pengembang_ataupun_pengguna_internet_dicoding_mantap_dan_luarbiasa">Lorem ipsum adalah text dummy yang kerap kali digunakan oleh para pengembang ataupun pengguna internet. Dicoding mantap dan luarbiasa.</string>
    <string name="movie">Movie</string>
    <string name="tvShow">TV Show</string>
    <string name="movie_catalogue">Movie Catalogue</string>
    <string name="kilasan_singkat">Kilasan Singkat</string>
    <string name="url_tmdb">https://www.themoviedb.org/t/p/w300_and_h450_bestv2</string>
    <string name="score">Score</string>
    <string name="score_value">%s/10</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="movie_title">Movie</string>
    <string name="tv_show_title">TV Show</string>
    <string name="favorite_title">Favorite</string>
    <string name="favorite_movies">Favorite Movie</string>
    <string name="favorite_tv_shows">Favorite TV Show</string>
    <string name="logo">logo</string>
    <string name="fav_movie_tv"><![CDATA[Favorite Movie & TV Show]]></string>
    <string name="message_undo">Batalkan menghapus item sebelumnya?</string>
    <string name="message_ok">Oke</string>
    <string name="nakama">Nakama!</string>
    <string name="unofficial_myanimelist">Unofficial MyAnimeList</string>
    <string name="anime">Anime</string>
    <string name="manga">Manga</string>
    <string name="favorite_anime">Favorite Anime</string>
    <string name="favorite_manga">Favorite Manga</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="status">Status</string>
    <string name="status_value">Status: %s</string>
    <string name="title_favorite">Favorite</string>
</resources>