<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".ui.splash.SplashActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center"
        tools:ignore="UselessParent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nakama"
            android:textStyle="bold"
            android:textColor="@color/red"
            android:fontFamily="@font/poppins"
            android:textSize="60sp"
            android:layout_marginBottom="12dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/unofficial_myanimelist"
            android:textSize="19sp"
            android:textColor="@color/black"
            android:layout_marginBottom="-8dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/by_munawir_fikri_al_akbari"
            android:textSize="16sp"
            android:textColor="@color/black"
            />
    </LinearLayout>


</RelativeLayout>