<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:background="@color/red"
            android:layout_width="match_parent"
            android:id="@+id/card_header"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            >
            <ImageView
                android:id="@+id/img_detail_poster"
                android:layout_width="200dp"
                android:layout_height="300dp"
                android:src="@color/colorAccent"
                android:contentDescription="@string/detail_poster" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="12dp"
                >
                <TextView
                    android:id="@+id/tv_detail_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textColor="@color/white"
                    android:text="@string/title"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/tv_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/status"
                    android:textColor="@color/white"
                    android:layout_marginBottom="18dp"
                    />

                <TextView
                    android:id="@+id/tv_start_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_date"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    />
                <TextView
                    android:id="@+id/tv_detail_start_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:text="@string/date_release"
                    android:layout_marginBottom="18dp"
                    />
                <TextView
                    android:id="@+id/tv_end_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end_date"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    />
                <TextView
                    android:id="@+id/tv_detail_end_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:text="@string/date_release"
                    android:layout_marginBottom="18dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:text="@string/score"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/tv_detail_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:text="@string/score"
                    />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/info_container"
            android:layout_width="match_parent"
            android:layout_below="@id/card_header"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="vertical"
            android:padding="12dp"
            android:background="@color/white"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kilasan_singkat"
                android:textColor="@color/primary"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginBottom="8dp"
                />
            <TextView
                android:id="@+id/tv_detail_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary"
                android:textSize="12sp"
                android:text="@string/lorem_ipsum_adalah_text_dummy_yang_kerap_kali_digunakan_oleh_para_pengembang_ataupun_pengguna_internet_dicoding_mantap_dan_luarbiasa"
                />

        </LinearLayout>

<!--<RelativeLayout-->
<!--    android:layout_width="wrap_content"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:layout_below="@id/info_container"-->
<!--    android:background="@color/primary"-->
<!--    android:padding="12dp"-->
<!--    android:layout_marginTop="12dp"-->
<!--    >-->
<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/cast"-->
<!--        android:id="@+id/judul_cast"-->
<!--        android:textColor="@color/white"-->
<!--        android:textStyle="bold"-->
<!--        android:textSize="20sp"-->
<!--        android:layout_marginBottom="8dp"-->
<!--        />-->
<!--    <LinearLayout-->
<!--        android:layout_below="@id/judul_cast"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:layout_marginBottom="12dp"-->
<!--        android:orientation="horizontal"-->
<!--        android:weightSum="3"-->
<!--        android:baselineAligned="false">-->
<!--        <LinearLayout-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="vertical"-->
<!--            android:gravity="center"-->
<!--            android:layout_weight="1"-->
<!--            tools:ignore="UseCompoundDrawables">-->
<!--            <ImageView-->
<!--                android:id="@+id/img_cast_1"-->
<!--                android:layout_width="100dp"-->
<!--                android:layout_height="100dp"-->
<!--                android:src="@color/white"-->
<!--                android:contentDescription="@string/img_cast_1" />-->
<!--            <TextView-->
<!--                android:id="@+id/tv_cast_1"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:textColor="@color/white"-->
<!--                android:text="@string/cast"-->
<!--                android:textSize="12sp"-->
<!--                />-->
<!--        </LinearLayout>-->
<!--        <LinearLayout-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="vertical"-->
<!--            android:gravity="center"-->
<!--            android:layout_weight="1"-->
<!--            tools:ignore="UseCompoundDrawables">-->
<!--            <ImageView-->
<!--                android:id="@+id/img_cast_2"-->
<!--                android:layout_width="100dp"-->
<!--                android:layout_height="100dp"-->
<!--                android:src="@color/white"-->
<!--                android:contentDescription="@string/img_cast_2" />-->
<!--            <TextView-->
<!--                android:id="@+id/tv_cast_2"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:textColor="@color/white"-->
<!--                android:text="@string/cast"-->
<!--                android:textSize="12sp"-->
<!--                />-->
<!--        </LinearLayout>-->
<!--        <LinearLayout-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="vertical"-->
<!--            android:gravity="center"-->
<!--            android:layout_weight="1"-->
<!--            tools:ignore="UseCompoundDrawables">-->
<!--            <ImageView-->
<!--                android:id="@+id/img_cast_3"-->
<!--                android:layout_width="100dp"-->
<!--                android:layout_height="100dp"-->
<!--                android:src="@color/white"-->
<!--                android:contentDescription="@string/img_cast_3" />-->
<!--            <TextView-->
<!--                android:id="@+id/tv_cast_3"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:textColor="@color/white"-->
<!--                android:text="@string/cast"-->
<!--                android:textSize="12sp"-->
<!--                />-->
<!--        </LinearLayout>-->
<!--    </LinearLayout>-->
<!--</RelativeLayout>-->


    </RelativeLayout>
</ScrollView>